--- a/src/components/cases/cases.pug
+++ b/src/components/cases/cases.pug
@@ -8,9 +8,9 @@ mixin cases ()
                     ext: `png`,
                 }).for-desktop
             .cases__swipper.for-desktop
-                .cases__swipper_icon1
+                .cases__swipper-arrow
                     +svg("swiper-left-arrow")
-                .cases__swipper_icon2
+                .cases__swipper-arrow
                     +svg("swiper-right-arrow")
             .cases__works
                 +picture({
