--- a/src/components/scholl-icons/scholl-icons.pug
+++ b/src/components/scholl-icons/scholl-icons.pug
@@ -1,5 +1,5 @@
 mixin scholl-icons(icon, name, title)
-    .scholl-icons
+    a.scholl-icons(href="#")
         .scholl-icons__icons
             .scholl-icons__icons_icon
                 +svg(icon)
