--- a/src/components/scholl-icons/scholl-icons.scss
+++ b/src/components/scholl-icons/scholl-icons.scss
@@ -1,61 +1,53 @@
 .scholl-icons {
-
     &__icons {
         display: flex;
         flex-direction: column;
-        gap: vc(10);
+        align-items: center;
         width: vc(161);
         height: vc(185);
-        align-items: center;
-
-        @include devices {
-            width: vc(102);
-            height: vc(148);
-        }
+        gap: vc(10);
 
         &_icon {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: vc(2) solid $color-orange;
+            border-radius: 100%;
             width: vc(127);
             height: vc(127);
             background: rgba(55, 39, 40, 0.6);
-            border: vc(2) solid $color-orange;
-            border-radius: 100%;
-            position: absolute;
+
+            svg {
+                width: vc(65);
+                height: vc(65);
+
+                @include devices {
+                    width: vc(48);
+                    height: vc(48);
+                }
+            }
 
             @include devices {
                 width: vc(101);
                 height: vc(101);
             }
-
-            svg {
-                position: relative;
-                width: vc(65);
-                height: vc(65);
-                top: vc(27);
-                left: vc(27);
-
-                @include devices {
-                    width: vc(48);
-                    height: vc(48);
-                    top: vc(25);
-                    left: vc(22);
-                }
-            }
         }
 
         h3 {
             position: relative;
-            width: vc(36);
-            height: vc(36);
-            background: rgba(55, 39, 40, 1);
+            left: vc(44);
             border: vc(1) dashed $color-orange;
             border-radius: 100%;
+            padding-top: vc(8);
+            width: vc(36);
+            height: vc(36);
             font-weight: 800;
             font-size: vc(13);
             line-height: vc(16);
             text-align: center;
             color: $color-orange;
-            padding-top: vc(8);
-            left: vc(44);
+            background: rgba(55, 39, 40, 1);
 
             @include devices {
                 left: vc(32);
@@ -63,21 +55,26 @@
         }
 
         p {
+            position: relative;
+            top: vc(90);
+            max-width: vc(161);
             font-weight: 400;
             font-size: vc(20);
             line-height: vc(23);
             text-align: center;
             color: $color-white;
-            position: relative;
-            top: vc(90);
-            max-width: vc(161);
 
             @include devices {
+                top: vc(70);
                 max-width: vc(117);
                 font-size: vc(14);
                 line-height: vc(16);
-                top: vc(70);
             }
+        }
+
+        @include devices {
+            width: vc(102);
+            height: vc(148);
         }
     }
 }
