--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -69,13 +69,14 @@
 
 .bg-image {
     position: relative;
-    &:before {
+
+    &::before {
         content: "";
         position: absolute;
+        left: 0;
+        top: 0;
         width: 100%;
         height: 100%;
-        top: 0;
-        left: 0;
         background-image: url("@images/background.png");
         background-size: vc(1920);
     }
