--- a/src/components/services/services.pug
+++ b/src/components/services/services.pug
@@ -41,4 +41,14 @@ mixin services()
             .services__menu
                 a.services__menu-item.services__menu-item--1(href="#")
                     p Идея
+                a.services__menu-item.services__menu-item--2(href="#")
+                    p Видео
+                a.services__menu-item.services__menu-item--3(href="#")
+                    p Фото
+                a.services__menu-item.services__menu-item--4(href="#")
+                    p Аудио
+                a.services__menu-item.services__menu-item--5(href="#")
+                    p Текст
+                a.services__menu-item.services__menu-item--6(href="#")
+                    p Печатня
 
