--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -10,12 +10,12 @@ mixin footer()
                 .footer__sections.for-desktop
                     h3 Разделы
                     .footer__sections-section.for-desktop
-                        p Идея
-                        p Видео
-                        p Фото
-                        p Аудио
-                        p Текст
-                        p Печатня
+                        a(href="#") Идея
+                        a(href="#") Видео
+                        a(href="#") Фото
+                        a(href="#") Аудио
+                        a(href="#") Текст
+                        a(href="#") Печатня
                 .footer__contacts
                     h3.for-desktop Контакты
                     .footer__contacts-contact
