--- a/src/components/advantages/advantages.pug
+++ b/src/components/advantages/advantages.pug
@@ -3,16 +3,32 @@ mixin advantages()
         .container
             .advantages__title
                 h2.h2 Наши преимущества
-            .advantages__icons.for-desktop
-                +scholl-icons("director", "01", "Какое то преимущество")
-                +scholl-icons("shared-vision", "03", "Какое то преимущество")
-                +scholl-icons("reels", "04", "Какое то преимущество")
-                +scholl-icons("reading-book", "05", "Какое то преимущество")
-            .advantages__services.for-devices
-                .advantages__services_service1
-                    +scholl-icons("director", "01", "Сам себе режиссер")
-                    +scholl-icons("take-a-photo", "02", "Раз, два, три и ты фотобог")
-                    +scholl-icons("shared-vision", "03", "Рилс на миллион просмотров")
-                .advantages__services_service2
-                    +scholl-icons("reels", "04", "Как снять вирусное видео")
-                    +scholl-icons("reading-book", "05", "Захватывающий сторитейлинг")
+            .advantages__icons
+                -
+                    let advantages = [
+                        {
+                            icon: 'director',
+                            title: 'Сам себе режиссер'
+                        }, {
+                            icon: 'take-a-photo',
+                            title: 'Раз, два, три и ты фотобог'
+                        }, {
+                            icon: 'shared-vision',
+                            title: 'Рилс на миллион просмотров'
+                        }, {
+                            icon: 'reels',
+                            title: 'Как снять вирусное видео'
+                        }, {
+                            icon: 'reading-book',
+                            title: 'Захватывающий сторитейлинг'
+                        }
+                    ]
+                each item, i in advantages
+                    a.scholl__icons(href = "#")
+                        .scholl__icons-item
+                            .scholl__icons-icon
+                                + svg(item.icon)
+                            .scholl__icons-title
+                                p = `0${i + 1}`
+                            .scholl__icons-text
+                                p= item.title
