--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,14 +1,12 @@
 .footer {
-    background: #251A1A;
-    z-index: 2;
     position: relative;
-
-    .container {}
+    z-index: 2;
+    background: #251a1a;
 
     &__info {
         display: flex;
-        justify-content: space-between;
         align-items: flex-start;
+        justify-content: space-between;
         padding-top: vc(35);
 
         @include devices {
@@ -18,8 +16,8 @@
     }
 
     &__logo {
-        width: vc(263);
         margin-top: vc(5);
+        width: vc(263);
 
         @include devices {
             margin: 0;
@@ -37,13 +35,13 @@
 
         &-section {
             display: grid;
+            grid-template-areas: ". . ." ". . .";
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr;
-            gap: 26px 50px;
-            grid-template-areas: ". . ." ". . .";
             margin-top: vc(20);
+            gap: 26px 50px;
 
-            p {
+            a {
                 font-weight: 400;
                 font-size: vc(20);
                 line-height: vc(23);
@@ -72,8 +70,8 @@
 
         &-contact {
             display: flex;
-            gap: vc(30);
             margin-top: vc(24);
+            gap: vc(30);
 
             @include devices {
                 flex-direction: column;
@@ -83,29 +81,29 @@
     }
 
     &__copyright {
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
         margin-top: vc(40);
-
-        @include devices {
-            margin-top: vc(30);
-        }
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
 
         p {
+            position: relative;
+            margin-top: vc(20);
+            padding-bottom: vc(20);
             font-weight: 500;
             font-size: vc(14);
             line-height: vc(16);
             text-align: center;
             color: $color-white;
-            position: relative;
-            margin-top: vc(20);
-            padding-bottom: vc(20);
 
-            @include devices{
+            @include devices {
                 font-weight: 400;
                 font-size: vc(12);
                 line-height: vc(14);
                 opacity: 0.6;
             }
+        }
+
+        @include devices {
+            margin-top: vc(30);
         }
     }
 }
