--- a/src/components/partners/partners.scss
+++ b/src/components/partners/partners.scss
@@ -1,17 +1,74 @@
 .partners {
     margin-top: vc(100);
 
-    @include devices {
-        margin-top: vc(40);
-    }
-
-    .container {}
-
     &__title {
         .h2 {
             @include devices {
                 width: 100%;
             }
         }
+    }
+
+    &__slider {
+        margin-top: vc(40);
+        margin-bottom: vc(95);
+        width: 100%;
+
+        .swiper {
+            margin-right: vc(-30);
+        }
+    }
+
+    &__logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: vc(30);
+        border: vc(3) solid #1d0b0b;
+        border-radius: vc(20);
+        padding: vc(20);
+        max-height: vc(120);
+        background: rgba(49, 35, 35, 0.6);
+        filter: grayscale(100%);
+        transition: filter $transition;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+        &:hover {
+            filter: grayscale(0);
+        }
+
+        @include devices {
+            border: 1px solid #1d0b0b;
+            border-radius: vc(5);
+            height: vc(48);
+        }
+    }
+
+    &__markers {
+        display: flex;
+        justify-content: center;
+        margin-top: vc(40);
+        gap: vc(22);
+    }
+
+    &__marker {
+        border-radius: 100%;
+        width: vc(22);
+        height: vc(22);
+        background-color: $color-white;
+        transition: $transition;
+
+        &-active {
+            background-color: $color-orange;
+        }
+    }
+
+    @include devices {
+        margin-top: vc(40);
     }
 }
