--- a/src/components/scholl/scholl.pug
+++ b/src/components/scholl/scholl.pug
@@ -4,8 +4,31 @@ mixin scholl()
             .scholl__online
                 h2.h2 Онлайн школа
             .scholl__service
-                +scholl-icons("director", "01", "Сам себе режиссер")
-                +scholl-icons("take-a-photo", "02", "Раз, два, три и ты фотобог")
-                +scholl-icons("shared-vision", "03", "Рилс на миллион просмотров")
-                +scholl-icons("reels", "04", "Как снять вирусное видео")
-                +scholl-icons("reading-book", "05", "Захватывающий сторитейлинг")
+                -
+                    let data = [
+                        {
+                            icon: 'director',
+                            title: 'Сам себе режиссер'
+                        }, {
+                            icon: 'take-a-photo',
+                            title: 'Раз, два, три и ты фотобог'
+                        }, {
+                            icon: 'shared-vision',
+                            title: 'Рилс на миллион просмотров'
+                        }, {
+                            icon: 'reels',
+                            title: 'Как снять вирусное видео'
+                        }, {
+                            icon: 'reading-book',
+                            title: 'Захватывающий сторитейлинг'
+                        }
+                    ]
+                each item, i in data
+                    a.scholl__icons(href="#")
+                        .scholl__icons-item
+                            .scholl__icons-icon
+                                +svg(item.icon)
+                            .scholl__icons-title
+                                p= `0${i + 1}`
+                            .scholl__icons-text
+                                p!= item.title
