--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -23,3 +23,6 @@ mixin header
                 +exposure("email", "E-mail", "example@gmail.com", "mailto:example@gmail.com")
                 +exposure("telephone", "Телефон:", "+7(495) 331 33 67", "#")
             .header__menu.for-devices
+                span
+                span
+                span
