--- a/src/components/advantages/advantages.pug
+++ b/src/components/advantages/advantages.pug
@@ -1,34 +1,32 @@
 mixin advantages()
     .advantages
         .container
-            .advantages__title
-                h2.h2 Наши преимущества
-            .advantages__icons
-                -
-                    let advantages = [
-                        {
-                            icon: 'director',
-                            title: 'Сам себе режиссер'
-                        }, {
-                            icon: 'take-a-photo',
-                            title: 'Раз, два, три и ты фотобог'
-                        }, {
-                            icon: 'shared-vision',
-                            title: 'Рилс на миллион просмотров'
-                        }, {
-                            icon: 'reels',
-                            title: 'Как снять вирусное видео'
-                        }, {
-                            icon: 'reading-book',
-                            title: 'Захватывающий сторитейлинг'
-                        }
-                    ]
-                each item, i in advantages
-                    a.scholl__icons(href = "#")
-                        .scholl__icons-item
-                            .scholl__icons-icon
-                                + svg(item.icon)
-                            .scholl__icons-title
-                                p = `0${i + 1}`
-                            .scholl__icons-text
-                                p= item.title
+            .advantages__row
+                .advantages__title
+                    h2.h2 Наши преимущества
+                .scholl__service
+                    -
+                        let data = [
+                            {
+                                icon: 'director',
+                                title: 'Сам себе режиссер'
+                            }, {
+                                icon: 'take-a-photo',
+                                title: 'Раз, два, три и ты фотобог'
+                            }, {
+                                icon: 'shared-vision',
+                                title: 'Рилс на миллион просмотров'
+                            }, {
+                                icon: 'reels',
+                                title: 'Как снять вирусное видео'
+                            }
+                        ]
+                    each item, i in data
+                        a.scholl__icons(href="#")
+                            .scholl__icons-item
+                                .scholl__icons-icon
+                                    +svg(item.icon)
+                                .scholl__icons-title
+                                    p= `0${i + 1}`
+                                .scholl__icons-text
+                                    p!= item.title
