--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -77,7 +77,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        background-image: url("@images/background.png");
+        background-image: url("@images/bg/background.png");
         background-size: vc(1920);
     }
 }
