--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,215 +1,215 @@
 .services {
-    position: relative;
+	position: relative;
 
-    .container {
-        margin-bottom: vc(85);
+	.container {
+		margin-bottom: vc(85);
 
-        @include devices {
-            margin-bottom: 0;
-        }
-    }
+		@include devices {
+			margin-bottom: 0;
+		}
+	}
 
-    &__service {
-        display: flex;
-        justify-content: flex-start;
+	&__service {
+		display: flex;
+		justify-content: flex-start;
 
-        .h2 {
-            width: vc(266);
+		.h2 {
+			width: vc(266);
 
-            @include devices {
-                width: 100%;
-            }
-        }
+			@include devices {
+				width: 100%;
+			}
+		}
 
-        img {
-            position: absolute;
-            left: vc(200);
-            top: vc(-35);
-            width: vc(191);
-            height: vc(191);
-        }
+		img {
+			position: absolute;
+			left: vc(200);
+			top: vc(-35);
+			width: vc(191);
+			height: vc(191);
+		}
 
-        @include devices {
-            margin-top: vc(28);
-        }
-    }
+		@include devices {
+			margin-top: vc(28);
+		}
+	}
 
-    &__list {
-        margin-top: vc(26);
-        width: vc(324);
-        height: vc(294);
+	&__list {
+		margin-top: vc(26);
+		width: vc(324);
+		height: vc(294);
 
-        ul {
-            border: vc(3) solid #1d0b0b;
-            border-radius: vc(20);
-            padding: vc(25) vc(78) vc(15) vc(25);
-            background: rgba(49, 35, 35, 0.9);
+		ul {
+			border: vc(3) solid #1d0b0b;
+			border-radius: vc(20);
+			padding: vc(25) vc(78) vc(15) vc(25);
+			background: rgba(49, 35, 35, 0.9);
 
-            li {
-                font-weight: 400;
-                font-style: normal;
-                font-size: vc(16);
-                color: $color-white;
-                transition: color $transition, text-decoration $transition;
+			li {
+				font-weight: 400;
+				font-style: normal;
+				font-size: vc(16);
+				color: $color-white;
+				transition: color $transition, text-decoration $transition;
 
-                &:not(:last-child) {
-                    line-height: vc(35);
-                }
+				&:not(:last-child) {
+					line-height: vc(35);
+				}
 
-                &:hover {
-                    text-decoration: underline;
-                    color: $color-orange;
-                }
+				&:hover {
+					text-decoration: underline;
+					color: $color-orange;
+				}
 
-                &:last-child {
-                    margin-top: vc(25);
-                }
-            }
-        }
-    }
+				&:last-child {
+					margin-top: vc(25);
+				}
+			}
+		}
+	}
 
-    &__icon {
-        position: relative;
-        left: vc(550);
-        border: vc(2) solid $color-orange;
-        border-radius: 100%;
-        width: vc(80);
-        height: vc(80);
+	&__icon {
+		position: relative;
+		left: vc(550);
+		border: vc(2) solid $color-orange;
+		border-radius: 100%;
+		width: vc(80);
+		height: vc(80);
 
-        svg {
-            position: relative;
-            top: vc(15);
-            width: vc(76);
-            height: vc(48);
-        }
-    }
+		svg {
+			position: relative;
+			top: vc(15);
+			width: vc(76);
+			height: vc(48);
+		}
+	}
 
-    &__items {
-        display: grid;
-        grid-template: 1fr 1fr / 1fr 1fr 1fr;
-        grid-template-areas:
-            ". . ."
-            ". . .";
-        margin-top: vc(10);
-        gap: vc(10) vc(10);
+	&__items {
+		display: grid;
+		grid-template: 1fr 1fr / 1fr 1fr 1fr;
+		grid-template-areas:
+			". . ."
+			". . .";
+		margin-top: vc(10);
+		gap: vc(10) vc(10);
 
-        &_item {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: vc(1) solid #1d0b0b;
-            border-radius: vc(10);
-            width: vc(109);
-            height: vc(54);
-            font-weight: 700;
-            text-align: center;
-            color: $color-white;
-            background: rgba(49, 35, 35, 0.9);
-        }
-    }
+		&_item {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border: vc(1) solid #1d0b0b;
+			border-radius: vc(10);
+			width: vc(109);
+			height: vc(54);
+			font-weight: 700;
+			text-align: center;
+			color: $color-white;
+			background: rgba(49, 35, 35, 0.9);
+		}
+	}
 
-    &__menu {
-        position: absolute;
-        left: vc(394);
-        top: vc(40);
-        width: vc(533);
+	&__menu {
+		position: absolute;
+		left: vc(394);
+		top: vc(40);
+		width: vc(533);
 
-        &-item {
-            position: absolute;
-            z-index: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            font-size: vc(33);
-            text-align: center;
-            color: #fff;
+		&-item {
+			position: absolute;
+			z-index: 1;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-weight: 700;
+			font-size: vc(33);
+			text-align: center;
+			color: #fff;
 
-            &::before {
-                content: '';
-                position: absolute;
-                z-index: -1;
-                width: 100%;
-                height: 100%;
-                background-image: none;
-                background-position: center;
-                background-size: cover;
-                background-repeat: no-repeat;
-                opacity: 0;
-                transition: opacity $transition;
-            }
+			&::before {
+				content: '';
+				position: absolute;
+				z-index: -1;
+				width: 100%;
+				height: 100%;
+				background-image: none;
+				background-position: center;
+				background-size: cover;
+				background-repeat: no-repeat;
+				opacity: 0;
+				transition: opacity $transition;
+			}
 
-            &:hover {
-                &::before {
-                    opacity: 1;
-                }
-            }
+			&:hover {
+				&::before {
+					opacity: 1;
+				}
+			}
 
-            &--1 {
-                top: vc(38);
-                left: vc(2);
-                width: vc(151);
-                height: vc(116);
+			&--1 {
+				left: vc(2);
+				top: vc(38);
+				width: vc(151);
+				height: vc(116);
 
-                &::before {
-                    background-image: url("@images/services/bg-01.svg");
-                }
-            }
+				&::before {
+					background-image: url("../components/services/images/bg-01.svg");
+				}
+			}
 
-            &--2 {
-                left: vc(146);
-                top: vc(14);
-                width: vc(175);
-                height: vc(119);
+			&--2 {
+				left: vc(146);
+				top: vc(14);
+				width: vc(175);
+				height: vc(119);
 
-                &::before {
-                    background-image: url("@images/services/bg-02.svg");
-                }
-            }
+				&::before {
+					background-image: url("../components/services/images/bg-02.svg");
+				}
+			}
 
-            &--3 {
-                left: vc(350);
-                top: vc(7);
-                width: vc(180);
-                height: vc(125);
+			&--3 {
+				left: vc(350);
+				top: vc(7);
+				width: vc(180);
+				height: vc(125);
 
-                &::before {
-                    background-image: url("@images/services/bg-03.svg");
-                }
-            }
+				&::before {
+					background-image: url("../components/services/images/bg-03.svg");
+				}
+			}
 
-            &--4 {
-                left: vc(-20);
-                top: vc(168);
-                width: vc(180);
-                height: vc(130);
+			&--4 {
+				left: vc(-20);
+				top: vc(168);
+				width: vc(180);
+				height: vc(130);
 
-                &::before {
-                    background-image: url("@images/services/bg-04.svg");
-                }
-            }
+				&::before {
+					background-image: url("../components/services/images/bg-04.svg");
+				}
+			}
 
-            &--5 {
-                left: vc(163);
-                top: vc(168);
-                width: vc(176);
-                height: vc(126);
+			&--5 {
+				left: vc(163);
+				top: vc(168);
+				width: vc(176);
+				height: vc(126);
 
-                &::before {
-                    background-image: url("@images/services/bg-05.svg");
-                }
-            }
+				&::before {
+					background-image: url("../components/services/images/bg-05.svg");
+				}
+			}
 
-            &--6 {
-                left: vc(343);
-                top: vc(159);
-                width: vc(180);
-                height: vc(139);
+			&--6 {
+				left: vc(343);
+				top: vc(159);
+				width: vc(180);
+				height: vc(139);
 
-                &::before {
-                    background-image: url("@images/services/bg-06.svg");
-                }
-            }
-        }
-    }
+				&::before {
+					background-image: url("../components/services/images/bg-06.svg");
+				}
+			}
+		}
+	}
 }
